--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,20 @@
 # Core requirements
 anthropic>=0.39.0  # For Claude API
 pyboy==2.2.0       # For Pokemon emulator
+requests>=2.31.0   # For Grok API
 
 # Image processing
 Pillow             # For image manipulation
 numpy==1.24.4      # For array operations
+
+# Web server requirements for the UI
+fastapi
+uvicorn[standard]
+aiofiles
+jinja2
+python-multipart
+
+# Optional packages for other providers
+# uncomment if needed
+# openai>=1.0.0    # For OpenAI API
+# google-generativeai  # For Google's API
