--- a/rewrite/config.yaml
+++ b/rewrite/config.yaml
@@ -25,7 +25,7 @@ env:
   # Number of environments to save videos for.
   n_record: 10
   # If true, give all party members max base stats.
-  perfect_ivs: False
+  perfect_ivs: True
   # If true, downsample the screen observation by 2.
   reduce_res: True
   # If true, losslessly compress the screen observation.
@@ -33,9 +33,9 @@ env:
   # How many steps until the environment returns an info.
   log_frequency: 2000
   # If true, disable the need for Flash.
-  auto_flash: True
+  auto_flash: False
   # If true, disable wild encounters with repels.
-  disable_wild_encounters: False
+  disable_wild_encounters: True
   # If true, disable AI input. Useful for debugging.
   disable_ai_actions: False
   # If true, teach cut if possible.
@@ -47,13 +47,13 @@ env:
   # If true, teach surf if possible.
   auto_teach_surf: False
   # If true, use strength when walking into a cave if possible.
-  auto_use_strength: True
+  auto_use_strength: False
   # If true, teach strength if possible.
-  auto_teach_strength: True
+  auto_teach_strength: False
   # If true, solve a strength puzzle if next to a moveable boulder.
   auto_solve_strength_puzzles: True
   # If true, toss all unneeded items when the bag is full.
-  auto_remove_all_nonuseful_items: True
+  auto_remove_all_nonuseful_items: False
   # If true, use Pokeflute when next to a Snorlax if possible.
   auto_pokeflute: True
   # If true, go to the next floor module num floors when entering an elevator.
@@ -70,7 +70,7 @@ env:
   # If true, give the player infinite money.
   infinite_money: True
   # If true, all Party Pokemon will have a fixed HP of 128.
-  infinite_health: False
+  infinite_health: True
   # If true, use the global map observation.
   use_global_map: False
   # If true, provide the PyBoy save state as a part of infos.
