--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,22 @@
 # Core requirements
-anthropic>=0.39.0  # For Claude API
-pyboy==2.2.0       # For Pokemon emulator
+# anthropic>=0.39.0  # For Claude API
+pyboy     # For Pokemon emulator
 requests>=2.31.0   # For Grok API
+
+# Environment
+gymnasium
+einops
 
 # Image processing
 Pillow             # For image manipulation
 numpy==1.24.4      # For array operations
+mediapy
+
+# Playthrough recording
+pygame
+
+# Config
+omegaconf
 
 # Web server requirements for the UI
 fastapi
@@ -18,3 +29,4 @@ python-multipart
 # uncomment if needed
 # openai>=1.0.0    # For OpenAI API
 # google-generativeai  # For Google's API
+flask==3.0.2
